<resources>
    <string name="app_name">Measure</string>

    <string name="welcome_to_measure">Welcome to Measure</string>
    <string name="log_in">LOGIN</string>
    <string name="log_in_small">Login to your Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_small">Sign up</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Home Address</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="sex">Sex</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>

    <string name="create_an_account">Create an Account</string>
    <string name="select_dress_type">Select Dress Type</string>
    <string name="personal_information">Personal Information</string>
    <string name="measurements">MEASUREMENTS</string>
    <string name="have_an_account">Have an Account? Login</string>
    <string name="dont_have_account">Don\'t have an Account? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>

    <string name="profile">Profile</string>
    <string name="new_customer">New Customer</string>
    <string name="new_measurement">New Measurement</string>
    <string name="all_measurement">All Measurement</string>
    <string name="favorite_measurement">Favorite Measurement</string>
    <string name="recent_measurement">Recent Measurement</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="favorites">Favorites</string>
    <string name="recents">Recents</string>
    <string name="all">All</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_measurement_female">Full Measurement (Female)</string>
    <string name="full_measurement_male">Full Measurement (Male)</string>
    <string name="trousers">Trousers</string>
    <string name="gown_and_caftan">Gown/Caftan</string>
    <string name="cap">Cap</string>
    <string name="jalambia">Jalambia</string>
    <string name="sokoto">Sokoto</string>
    <string name="wrapper">Wrapper (Iro)</string>
    <string name="skirt">Skirt</string>
    <string name="suit_and_jacket">Suit/Jacket</string>
    <string name="shirt">Shirt</string>
    <string name="vest">Vest</string>
    <string name="buba_male">Buba (Male)</string>
    <string name="agbada">Agbada</string>
    <string name="dansiki">Dansiki</string>

    <string name="neck">Neck</string>
    <string name="back">Back</string>
    <string name="half_back">Half Back</string>
    <string name="short_sleeve">Short Sleeve</string>
    <string name="three_quarter_sleeve">Three Quarter Sleeve</string>
    <string name="long_sleeve">Long Sleeve</string>
    <string name="arm_hole">Arm Hole</string>
    <string name="round_sleeve">Round Sleeve</string>
    <string name="wrist">Wrist</string>
    <string name="bust">Bust</string>
    <string name="nipple_to_nipple">Nipple to Nipple</string>
    <string name="round_under_bust">Round Under Bust</string>
    <string name="breast_point">Breast Point</string>
    <string name="body">Body</string>
    <string name="under_bust">Under Bust</string>
    <string name="blouse_length_half">Blouse Length Half</string>
    <string name="blouse_length">Blouse Length</string>
    <string name="waist">Waist</string>
    <string name="waist_to_hip">Waist to Hip</string>
    <string name="hip">Hip</string>
    <string name="thigh">Thigh</string>
    <string name="gown_length">Gown Length</string>
    <string name="skirt_length">Skirt Length</string>
    <string name="trouser_length">Trouser Length</string>
    <string name="full_length">Full Length</string>
    <string name="head">Head</string>
    <string name="chest">Chest</string>
    <string name="half_chest">Half Chest</string>
    <string name="shirt_length">Shirt Length</string>
    <string name="buba_length">Buba Length</string>
    <string name="bottom">Bottom</string>

    <string name="thank_you">Thank you!</string>
    <string name="just_sent_email">
                                We have sent an email to
                                jahmeyou.okanlawon@gmail.com
    </string>
    <string name="send_link_message">
                                Please click the link in the message to
                                activate your account
    </string>
    <string name="email_confirmed">Email Confirmed</string>
    <string name="email_confirmed_message">You will be redirected to the Login Page,
                                        If not, click LOGIN button below
    </string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_message">Enter your email address below and
                                        we'll send you a secure link to reset your password
    </string>
    <string name="send_link">Send Link</string>
    <string name="reset_password_message">
        Click the secure link we sent you
        to reset you password. If you
        didn't receive an email, check your
        Spam folder
    </string>
    <string name="next_button">NEXT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_measurements_list_page">MeasurementsListPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
