<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".SignUpPage2"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/personalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/personal_information"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/company_name"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/haveAnAccount2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/signUpCompanyNameEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpCompanyName"
        app:layout_constraintTop_toBottomOf="@+id/signUpCompanyName" />

    <TextView
        android:id="@+id/signUpCompanyAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/company_address"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/signUpCompanyNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpCompanyNameEdit" />

    <EditText
        android:id="@+id/signUpCompanyAddressEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpCompanyAddress"
        app:layout_constraintTop_toBottomOf="@+id/signUpCompanyAddress" />

    <TextView
        android:id="@+id/signUpPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/signUpCompanyAddressEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpCompanyAddressEdit" />

    <EditText
        android:id="@+id/signUpPhoneNumberEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumber" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background_2"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/signUpPhoneNumberEdit"
        app:layout_constraintStart_toStartOf="@+id/signUpPhoneNumberEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumberEdit" />

    <TextView
        android:id="@+id/haveAnAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/have_an_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>