<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".SignUpPage1"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/createAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_an_account"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_name"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/haveAnAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/signUpFirstNameEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorTextAndIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpFirstName"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstName" />

    <TextView
        android:id="@+id/signUpLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/last_name"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/signUpFirstNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstNameEdit" />

    <EditText
        android:id="@+id/signUpLastNameEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorTextAndIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpLastName"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastName" />

    <TextView
        android:id="@+id/signUpEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_address"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/signUpLastNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastNameEdit" />

    <EditText
        android:id="@+id/signUpEmailAddressEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorTextAndIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailAddress" />

    <TextView
        android:id="@+id/signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailAddressEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailAddressEdit" />

    <EditText
        android:id="@+id/signUpConfirmPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

    <Button
        android:id="@+id/signUpNextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background_2"
        android:text="@string/next_button"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/haveAnAccount"
        app:layout_constraintEnd_toEndOf="@+id/signUpConfirmPasswordEdit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signUpConfirmPasswordEdit"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPasswordEdit"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/haveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/have_an_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>